--- a/index2.html
+++ b/index2.html
@@ -90,7 +90,7 @@
         </div>
     </div>
 </div>
-<a href="Ass3.html">ass1</a>
+<a href="index3.html">ass1</a>
 <footer class="bg-dark text-white text-center p-3 mt-4">
     <p>&copy; 2025 MyArt Portfolio. All rights reserved.</p>
 </footer>
