--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </article>
     </section>
 </main>
-<a href="Ass3.html">ass3</a>
+<a href="index2.html">ass2</a>
 <footer class="site-footer">
     <p>© 2025 Responsive Demo</p>
 </footer>
